2003-03-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-groups-should-use-list-page):
	Abolish.
	(shimbun-asahi-content-start, shimbun-asahi-content-end): Follow
	the change of the web site.
	(shimbun-asahi-index-url): New function.
	(shimbun-index-url): Use it.
	(shimbun-asahi-get-headers-in-the-list-page): Abolish.
	(shimbun-asahi-get-headers): Rename from
	`shimbun-asahi-get-headers-in-the-top-page'.
	(shimbun-get-headers): Use it.

2003-02-28  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-util.el (w3m-get-server-hostname): Rename and move from
	`w3m-process-get-server-root' in `w3m-proc.el'.

	* w3m-proc.el (w3m-process-set-authinfo, w3m-process-read-user)
	(w3m-process-read-passwd, w3m-process-y-or-n-p): Use
	`w3m-get-server-hostname' instead of
	`w3m-process-get-server-root'.

	* w3m.el (w3m-show-error-information): New customized variable.
	(w3m-w3m-attributes): Message strange `Location:' like lynx.
	(w3m-retrieve-and-render): When error occur, show error message
	in `w3m buffer' to be accompanied by `w3m-show-error-information'.
	(w3m-show-error-information): New function.
	(w3m-reload-this-page, w3m-redisplay-this-page)
	(w3m-redisplay-and-reset, w3m-redisplay-with-charset)
	(w3m-view-source, w3m-view-header): If `w3m-current-url' is nil,
	dont' execute command.
	(w3m): Guard from the bug of `select-frame-set-input-focus' in
	Emacs-21.3.x. If `w3m-current-url' is nil in `w3m buffer'

2003-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-generate-shimbun-servers-file): Exclude fml,
	glimpse, lump, mailarc, mailman, mhonarc and text; indent.
	(w3mhack-generate-colon-keywords-file): indent.

	* shimbun/nnshimbun.el (gnus-group-make-shimbun-group): Accept
	arguments.

2003-02-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/nnshimbun.el (nnshimbun-is-compiled-for-modern-gnus):
	Make sure the `gnus-define-group-parameter' macro really works.

2003-02-26  Katsumi Yamaoka  <yamaoka@jpl.org>
